# text-generation-service

./: README.md  api.py  database.db  database.db-journal  main.py  pyproject.toml
prisma/: schema.prisma
prisma/migrations/20241007220851_init/: migration.sql
prisma/migrations/20241020111722_added_interests/: migration.sql
prisma/migrations/20241020114007_remove_interests_table/: migration.sql
prisma/migrations/20241022094629_add_words/: migration.sql
prisma/migrations/20241022095010_add_history/: migration.sql
prisma/migrations/20241022102511_change_names/: migration.sql
src/: main.py  openai.py
src/models/: languages.py  sentences.py  user.py  word.py
src/routes/: __init__.py  frontend.py  openai.py  score.py  test.py  user.py  words.py
src/services/: calculate_text_score.py  dcrf.py  generate_text.py  get_calibration_text.py  get_contexts_for_user.py  get_text_for_user.py  get_text_types_for_user.py  post_word_to_db.py  score_service.py  user_service.py
vocab/: corpus.txt  en_m3.xls  it_m3.xls
