[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.51.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
spacy = "^3.8.2"
xlrd = "^2.0.1"
prisma = "^0.15.0"
fastapi = "^0.115.0"
asyncio = "^3.4.3"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
